# connect

./: .breakpoints  README.md  main.py  pyproject.toml
DB/: connectionDB.py
backend/: .breakpoints  main.py
backend/DB/: blobStorage.py  connectionDB.py
backend/util/: auth.py  utility.py
frontend/: README.md  package-lock.json  package.json
frontend/connect/: home-responsive.css  home.css  home.html
frontend/public/: index.html  manifest.json
frontend/src/: Box.js  Links.js  Login.js  Main.js  Menu.js  Page.js  Preview.js  Profile.js  Settings.html  Signup.js  home-responsive.css  home.css  home.html  login.css  responsive.css
util/: auth.py  connectionDB.py  utility.py
